# rlm_experiments

./: pyproject.toml
codeqa_comparison/: README.org  assemble.py  clone.py  codeqa_dataset.org  common.py  dspy_rlm.py  file_match.py  identify_files.py  pyproject.toml  repo_search.py  research_questions.org  rlm_prompts.py  rlm_utils.py  run_pipeline.sh  run_rlm.py  tasks.org
codeqa_comparison/tests/: test_assemble.py  test_common.py
dspy_rlm/: README.md  adapters.py  collect_sft_data.py  compare_evals.py  config.yaml  config_model.py  config_qwen36_27b.yaml  config_qwen397b.yaml  customizable_rlm.py  customized_rlm.org  data_status.org  data_utils.py  debugging.org  dspy_sft_data_collection.org  evaluate.py  export_traces.py  finetuned_config.yaml  local_config.yaml  local_sample_config.yaml  mlflow_config.yaml  opus_sample_config.yaml  prompts.py  pyproject.toml  sample_config.yaml  sample_config_easy_medium.yaml  sample_config_qwen36_27b.yaml  sample_config_qwen397b.yaml  sample_config_short.yaml  tasks.org  test_adapters.py  test_customizable_rlm.py  tracing_backend.py
dspy_rlm/evals/: eval_results.org
dspy_rlm/org/: EXPLORATION_dspy_structured_output.org  PLAN_dspy_sft_data_collection.org
model_serving/: docker-compose.local.yml  docker-compose.yml
training/: Qwen3_5_(4B)_Finetuning.ipynb  README.md  config.py  config.yaml  data_utils.py  export_gguf.py  pyproject.toml  tasks.org  train_qwen3_5.py
