[project]
name = "dspy-rlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix-client>=1.31.0",
    "arize-phoenix-evals>=2.11.0",
    "arize-phoenix-otel>=0.15.0",
    "datasets>=4.6.1",
    "dspy-ai>=3.1.3",
    "fire>=0.7.1",
    "mlflow>=3.10.1",
    "openinference-instrumentation-dspy>=0.1.33",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
