[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "fire>=0.7.0",
    "flash-linear-attention>=0.4.1",
    "ipykernel>=7.2.0",
    "tokenizers>=0.22.2",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "trackio>=0.19.0",
    "transformers==5.2.0",
    "triton>=3.3.0",
    "trl==0.22.2",
    "unsloth-zoo[base]",
    "unsloth[base]",
    "xformers==0.0.32.post2",
]

[tool.uv.sources]
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo" }
unsloth = { git = "https://github.com/unslothai/unsloth" }
